CPG-DEV/src/objects/Plant_Location__c.object
<CustomObject>
    <fields>
        <fullName>Capacity__c</fullName>
        <description>US50</description>
        <label>Capacity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Capital_Improvement__c</fullName>
        <inlineHelpText>Please include a Date when updating this field with new information on Plant capital improvements.</inlineHelpText>
        <label>Capital Improvement</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor__c</fullName>
        <label>Competitor</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Plant Locations</relationshipLabel>
        <relationshipName>Plant_Locations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Brazil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Grind__c</fullName>
        <description>US50</description>
        <label>Grind</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LegacyRecordID__c</fullName>
        <label>Legacy Record ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <description>To report on plant locations by region</description>
        <label>Region</label>
        <picklist>
            <picklistValues>
                <fullName>Region A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region D</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <description>US50</description>
        <label>Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Kilogram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ton</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pounds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gallons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Liters</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Plant Location</label>
    <nameField>
        <label>Plant Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Plant Locations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>